# stm32bs-template-default

./: Cargo.toml  ProductsList.csv  README.md  README.md.liquid  init_script.rhai  memory.x  pac_info.csv  placeholder_test.toml  stm32bs.db  stm32bs.toml  test_conflict.txt
.cargo/: config.toml
demo/: blink.rs
src/: main.rs
